Modificando imagens ao todo

--- a/paginas/pag3.html
+++ b/paginas/pag3.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aprendendo Git e GitHub</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
-        <a href="index.html" id="logo-principal"><img src="/media/principal.png" alt="Home"></a>
+        <a href="index.html" id="logo-principal"><img src="../media/principal.png" alt="Home"></a>
         <h1 id="principal">Git e GitHub</h1>
             <nav id="navbar">
                 <ul>
@@ -38,9 +38,9 @@
         <div class="container">
             <div class="box1">Página Web desenvolvida como material de estudo do curso do <a href="https://web.dio.me/home" target="_blank">Digital Inovation One</a></div>
             <div class="box1">Curso de Microsoft Azure AI Fundamentals AI-900, Git e GitHub, lecionado por <a href="https://github.com/elidianaandrade/dio-curso-git-github" target="_blank">Elidiana Andrade</a></div>
-            <div class="box1"><img src="/media/inst.png" alt="Meu LinkedIn" style="width: 80px; height: 80px; margin-top: 8px; margin-left: 30px; margin-right: 25px;"><a href="https://www.instagram.com/gustavo_locutor/" target="_blank" rel="external">Meu Instagram</a></div>
-            <div class="box1"><img src="/media/github.png" alt="Meu GitHub" style="width: 80px; height: 80px; margin-top: 8px; margin-left: 30px; margin-right: 25px;"><a href="https://github.com/Navarrasa" target="_blank" rel="external">Meu GitHub</a></div>
-            <div class="box1"><img src="/media/In.png" alt="Meu LinkedIn" style="width: 80px; height: 80px; margin-top: 8px; margin-left: 30px; margin-right: 25px;"><a href="https://www.linkedin.com/in/gustavo-bruno-90344a272/" target="_blank" rel="external">Meu LinkedIn</a></div>
+            <div class="box1"><img src="../media/inst.png" alt="Meu LinkedIn" style="width: 80px; height: 80px; margin-top: 8px; margin-left: 30px; margin-right: 25px;"><a href="https://www.instagram.com/gustavo_locutor/" target="_blank" rel="external">Meu Instagram</a></div>
+            <div class="box1"><img src="../media/github.png" alt="Meu GitHub" style="width: 80px; height: 80px; margin-top: 8px; margin-left: 30px; margin-right: 25px;"><a href="https://github.com/Navarrasa" target="_blank" rel="external">Meu GitHub</a></div>
+            <div class="box1"><img src="../media/In.png" alt="Meu LinkedIn" style="width: 80px; height: 80px; margin-top: 8px; margin-left: 30px; margin-right: 25px;"><a href="https://www.linkedin.com/in/gustavo-bruno-90344a272/" target="_blank" rel="external">Meu LinkedIn</a></div>
         </div>
     </footer>
 </body>
