--- a/paginas/pag7.html
+++ b/paginas/pag7.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aprendendo Branches</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
-        <a href="index.html" id="logo-principal"><img src="/media/principal.png" alt="Home"></a>
+        <a href="index.html" id="logo-principal"><img src="../media/principal.png" alt="Home"></a>
         <h1 id="principal">Lidando com Branches</h1>
             <nav id="navbar">
                 <ul>
@@ -26,14 +26,14 @@
         <h1>Criando Branches</h1>
         <p>As Branchs, ou "ramos", são ramificações de seu projeto, ponteiros que demarcam os commits realizados, sendo trabalhadas de maneira independente, isso porquê podemos criar diversas branchs durante os processos no Git, para que possamos adicionar funcionalidades em nosso projeto, sem alterar a branch principal, em que está sendo desenvolvida.</p>
         <p>Para exemplificar, veja a imagem abaixo:</p>
-        <img src="/media/branches.png" alt="Branches" style="width: 600px ;">
+        <img src="../media/branches.png" alt="Branches" style="width: 600px ;">
         <p>Em nossos commits, podemos ver o branch em que se está sendo utilizada. Para visualizar os commits realizados, digitamos <span class="codigo">git log</span>, onde mostrará todos os commits e em qual branch eles estão sendo desenvolvidos.</p>
-        <p style="display: flex;;"><img src="/media/git_log.png" alt="Git Log" style="margin-right: 10px;"> <br>Observe que: No log, podemos observar o nosso user.name e user.email, previamente configurados. <br>Ao lado do ID do commit, está a branch utilizada.</p>
-        <p>Para criar uma nova branch, usamos o seguinte comando no Git Bash: <span class="codigo">git chekout -b nomedabranch</span><br>Este comando criará uma nova branch e essa branch estará sendo desenvolvida a partir do último commit realizado pela branch principal &#40;main ou master&#41;<br><img src="/media/nova_branch.png" alt="New branch"></p><p>Para alterarmos novamente para a branch principal, use o comando <span class="codigo">git chekout main/master</span> &#40;O motivo de não ter o -b desta vez é porquê estamos trocando de branch e não criando uma nova, fica a dica!&#41;</p>
+        <p style="display: flex;;"><img src="../media/git_log.png" alt="Git Log" style="margin-right: 10px;"> <br>Observe que: No log, podemos observar o nosso user.name e user.email, previamente configurados. <br>Ao lado do ID do commit, está a branch utilizada.</p>
+        <p>Para criar uma nova branch, usamos o seguinte comando no Git Bash: <span class="codigo">git chekout -b nomedabranch</span><br>Este comando criará uma nova branch e essa branch estará sendo desenvolvida a partir do último commit realizado pela branch principal &#40;main ou master&#41;<br><img src="../media/nova_branch.png" alt="New branch"></p><p>Para alterarmos novamente para a branch principal, use o comando <span class="codigo">git chekout main/master</span> &#40;O motivo de não ter o -b desta vez é porquê estamos trocando de branch e não criando uma nova, fica a dica!&#41;</p>
         <p>Se quisermos ver a lista de branchs disponíveis e seus últimos commits, podemos utilizar o comando <span class="codigo">git branch -v</span></p>
         <h1>Mesclando Branches</h1>
         <p>Caso seja necessário que as alterações da branch nova seja incluída à branch principal, precisaremos mesclar elas. <br>Nesse caso, para mesclar uma branch, usaremos o comando <span class="codigo">git merge nomedabranch</span>, e essa branch selecionada será mesclada à branch principal</p>
-        <img src="/media/git_merge.png" alt="Git Merge">
+        <img src="../media/git_merge.png" alt="Git Merge">
         <h1>Deletando Branches</h1>
         <p>Quando a branch deixar de ser utilizada durante o desenvolvimento de uma nova função, podemos deletar ela pelo Git Bash com o comando <span class="codigo">git branch -d nomedabranch</span>.</p>
         <h1>Trantando de Conflitos e Comandos úteis</h1>
@@ -52,9 +52,9 @@
         <div class="container">
             <div class="box1">Página Web desenvolvida como material de estudo do curso do <a href="https://web.dio.me/home" target="_blank">Digital Inovation One</a></div>
             <div class="box1">Curso de Microsoft Azure AI Fundamentals AI-900, Git e GitHub, lecionado por <a href="https://github.com/elidianaandrade/dio-curso-git-github" target="_blank">Elidiana Andrade</a></div>
-            <div class="box1"><img src="/media/inst.png" alt="Meu LinkedIn" style="width: 80px; height: 80px; margin-top: 8px; margin-left: 30px; margin-right: 25px;"><a href="https://www.instagram.com/gustavo_locutor/" target="_blank" rel="external">Meu Instagram</a></div>
-            <div class="box1"><img src="/media/github.png" alt="Meu GitHub" style="width: 80px; height: 80px; margin-top: 8px; margin-left: 30px; margin-right: 25px;"><a href="https://github.com/Navarrasa" target="_blank" rel="external">Meu GitHub</a></div>
-            <div class="box1"><img src="/media/In.png" alt="Meu LinkedIn" style="width: 80px; height: 80px; margin-top: 8px; margin-left: 30px; margin-right: 25px;"><a href="https://www.linkedin.com/in/gustavo-bruno-90344a272/" target="_blank" rel="external">Meu LinkedIn</a></div>
+            <div class="box1"><img src="../media/inst.png" alt="Meu LinkedIn" style="width: 80px; height: 80px; margin-top: 8px; margin-left: 30px; margin-right: 25px;"><a href="https://www.instagram.com/gustavo_locutor/" target="_blank" rel="external">Meu Instagram</a></div>
+            <div class="box1"><img src="../media/github.png" alt="Meu GitHub" style="width: 80px; height: 80px; margin-top: 8px; margin-left: 30px; margin-right: 25px;"><a href="https://github.com/Navarrasa" target="_blank" rel="external">Meu GitHub</a></div>
+            <div class="box1"><img src="../media/In.png" alt="Meu LinkedIn" style="width: 80px; height: 80px; margin-top: 8px; margin-left: 30px; margin-right: 25px;"><a href="https://www.linkedin.com/in/gustavo-bruno-90344a272/" target="_blank" rel="external">Meu LinkedIn</a></div>
         </div>
     </footer>
 </body>
