--- a/paginas/pag5.html
+++ b/paginas/pag5.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Repositórios GitHub</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
-        <a href="index.html" id="logo-principal"><img src="/media/principal.png" alt="Home"></a>
+        <a href="index.html" id="logo-principal"><img src="../media/principal.png" alt="Home"></a>
         <h1 id="principal">Repositórios GitHub</h1>
             <nav id="navbar">
                 <ul>
@@ -25,7 +25,7 @@
     <main>
         <h1>Trabalhando com repositórios do GitHub</h1>
         <h1>Criando Repositórios</h1>
-        <p style="display: flex;"><img src="/media/criando_repo.png" alt="Criando repositórios" style="width: 250px; margin-right: 10px;">Para criar repositórios diretamente no GitHub, primeiro precisamos logar em nossa conta, selecionar a opção &#43;&#8744; ao lado da Search Bar:
+        <p style="display: flex;"><img src="../media/criando_repo.png" alt="Criando repositórios" style="width: 250px; margin-right: 10px;">Para criar repositórios diretamente no GitHub, primeiro precisamos logar em nossa conta, selecionar a opção &#43;&#8744; ao lado da Search Bar:
         <br>Escolher a opção New Repository, dar um nome ao repositório, uma descrição sobre o que se trata esse repositório, se ele será público para a visuaização e cooperação de outras pessoas, ou privado, onde só pessoas que você escolher pode interagir com o repositório.</p>
         <p>Com o repositório criado, podemos iniciar o upload de arquivos de nossos projetos para que as outras pessoas possam visualizar e colaborar com o nosso projeto. <br>Caso queira iniciar os processos com o Git, precisaremos de uma autenticação via Git, para que as funções sejam liberadas, para isso, precisaremos de um Token, ou uma chave SSH.</p>
         <h1>Token GitHub</h1>
@@ -64,7 +64,7 @@
             <li>Utilizar o comando <span class="codigo">git init</span></li>
         </ul>
         A pasta virará um repositório Git após esse comando. <br>
-        <img src="/media/repo_git.png" alt="Repositório Git">
+        <img src="../media/repo_git.png" alt="Repositório Git">
         </p>
         <p>Clonando um repositório remoto:
             <ul>
@@ -73,16 +73,16 @@
                 <li>Executar o comando <span class="codigo">git clone &#40;URL&#41;</span></li>
             </ul>
             Após isso, o repositório será clonado dentro da pasta selecionada. <br>
-            <img src="/media/git_clone.png" alt="Clone Git">
+            <img src="../media/git_clone.png" alt="Clone Git">
         </p>
     </main>
     <footer>
         <div class="container">
             <div class="box1">Página Web desenvolvida como material de estudo do curso do <a href="https://web.dio.me/home" target="_blank">Digital Inovation One</a></div>
             <div class="box1">Curso de Microsoft Azure AI Fundamentals AI-900, Git e GitHub, lecionado por <a href="https://github.com/elidianaandrade/dio-curso-git-github" target="_blank">Elidiana Andrade</a></div>
-            <div class="box1"><img src="/media/inst.png" alt="Meu LinkedIn" style="width: 80px; height: 80px; margin-top: 8px; margin-left: 30px; margin-right: 25px;"><a href="https://www.instagram.com/gustavo_locutor/" target="_blank" rel="external">Meu Instagram</a></div>
-            <div class="box1"><img src="/media/github.png" alt="Meu GitHub" style="width: 80px; height: 80px; margin-top: 8px; margin-left: 30px; margin-right: 25px;"><a href="https://github.com/Navarrasa" target="_blank" rel="external">Meu GitHub</a></div>
-            <div class="box1"><img src="/media/In.png" alt="Meu LinkedIn" style="width: 80px; height: 80px; margin-top: 8px; margin-left: 30px; margin-right: 25px;"><a href="https://www.linkedin.com/in/gustavo-bruno-90344a272/" target="_blank" rel="external">Meu LinkedIn</a></div>
+            <div class="box1"><img src="../media/inst.png" alt="Meu LinkedIn" style="width: 80px; height: 80px; margin-top: 8px; margin-left: 30px; margin-right: 25px;"><a href="https://www.instagram.com/gustavo_locutor/" target="_blank" rel="external">Meu Instagram</a></div>
+            <div class="box1"><img src="../media/github.png" alt="Meu GitHub" style="width: 80px; height: 80px; margin-top: 8px; margin-left: 30px; margin-right: 25px;"><a href="https://github.com/Navarrasa" target="_blank" rel="external">Meu GitHub</a></div>
+            <div class="box1"><img src="../media/In.png" alt="Meu LinkedIn" style="width: 80px; height: 80px; margin-top: 8px; margin-left: 30px; margin-right: 25px;"><a href="https://www.linkedin.com/in/gustavo-bruno-90344a272/" target="_blank" rel="external">Meu LinkedIn</a></div>
         </div>
     </footer>
 </body>
