--- a/paginas/pag4.html
+++ b/paginas/pag4.html
@@ -26,8 +26,8 @@
         <h1>Configurando o Git</h1>
         <p>Para iniciarmos a nossa jornada com a criação de grandes repositórios que irão conter os nossos projetos, precisamos primeiro configurar devidamente o nosso DVCS, para que não haja problemas de autenticidade mais para frente.</p>
         <p>Com isso, iniciaremos com o download do <a href="https://git-scm.com/downloads" rel="external" target="_blank" class="link">Git Bash</a>, o DVCS do Git.</p>
-        <p>Agora, criamos uma nova pasta para iniciar a nossa jornada com o Git Bash. <img src="../media/abrir_git_bash.png" alt="abrir git bash" style="margin-top: 8px;"></p>
-        <p>Com o Git Bash aberto, nos deparamos com essa tela:<img src="../media/git_bash.png" alt="git bash" style="margin-top: 8px;"></p>
+        <p>Agora, criamos uma nova pasta para iniciar a nossa jornada com o Git Bash. <br><img src="../media/abrir_git_bash.png" alt="abrir git bash" style="margin-top: 8px;"></p>
+        <p>Com o Git Bash aberto, nos deparamos com essa tela: <br><img src="../media/git_bash.png" alt="git bash" style="margin-top: 8px;"></p>
         <p>Nesta tela inicial, podemos ver três coisas importantes: 
             <ol><li>Nome de Usuário</li>
                 <li>Nome do Computador</li>
@@ -43,7 +43,7 @@
                 <li>--local: Referencia todo o tipo de alteração feita em um repositório específico</li>
             </ol>
         </p>
-        <p>Agora, podemos configurar o nosso nome e e-mail do git, com os comandos <span class="codigo">git config --global user.name</span> e <span class="codigo">git config --global user-email</span>, que ficará assim: <img src="../media/conf_bash.png" alt="Git Bash configuração" style="margin-top: 8px;"></p>
+        <p>Agora, podemos configurar o nosso nome e e-mail do git, com os comandos <span class="codigo">git config --global user.name</span> e <span class="codigo">git config --global user-email</span>, que ficará assim: <br><img src="../media/conf_bash.png" alt="Git Bash configuração" style="margin-top: 8px;"></p>
         <p>Para verificar a lista de configurações realizadas, utilizamos o comando <span class="codigo">git config --global --list</span>, sendo --global porquê é referente as configurações realizadas ao usuário.</p>
         <p>Para mais informações sobre configurações Git, <a href="https://git-scm.com/book/en/v2/Getting-Started-First-Time-Git-Setup" rel="external" target="_blank" class="link">clique aqui</a></p>
     </main>
